[package]
name = "bayesic"
version = "0.1.0"
authors = ["mmmries <riesmmm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
lazy_static = "1.4.0"
pretty_assertions = "0.4.0"
regex = "1.3.1"