[package]
name = "bayesic"
version = "0.1.1"
authors = ["mmmries <riesmmm@gmail.com>"]
categories = ["data-structures"]
keywords = ["bayes", "bayesian", "classification"]
repository = "https://github.com/mmmries/bayesic_rs"
edition = "2021"
license = "MIT"
description = "A string matching library similar to NaiveBayes but optimized for many small classifications"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
bencher = "0.1.5"
lazy_static = "1.4.0"
pretty_assertions = "0.4.0"
regex = "1.3.1"

[[bench]]
name="classification"
harness=false

[[bench]]
name="training"
harness=false
